@@ -1,3 +1,8 @@
+2006-07-10  Sven Panne  <sven.panne@aedion.de>
+
+	* src/backends/alc_backend_oss.c: Set preferred buffer size. Fixed open
+	mode.
+
 2006-07-05  Sven Panne  <sven.panne@aedion.de>
 
 	* src/al_mixer.c, src/al_types.h, src/alc/alc_context.c,
